--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -41,6 +41,13 @@
 }
 
 @font-face {
+  font-family: 'roboto-bold';
+  src: url('/fonts/Roboto-Bold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'openSans-bold';
   src: url('/fonts/OpenSans-Bold.ttf') format('truetype');
   font-weight: normal;
