--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -54,6 +54,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'openSans-regular';
+  src: url('/fonts/OpenSans-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
