--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,6 +34,13 @@
 }
 
 @font-face {
+  font-family: 'playfairDisplay-regular';
+  src: url('/fonts/PlayfairDisplay-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'roboto-regular';
   src: url('/fonts/Roboto-Regular.ttf') format('truetype');
   font-weight: normal;
