--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,7 @@
   src: url('/fonts/CinzelDecorative-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url('/fonts/NunitoSans-VariableFont_YTLC,opsz,wdth,wght.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
   src: url('/fonts/Cinzel-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -24,6 +27,7 @@
   src: url('/fonts/Cinzel-Bold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -31,6 +35,7 @@
   src: url('/fonts/PlayfairDisplay-Bold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -38,6 +43,7 @@
   src: url('/fonts/PlayfairDisplay-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -45,6 +51,7 @@
   src: url('/fonts/Roboto-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -52,6 +59,7 @@
   src: url('/fonts/Roboto-Bold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -59,6 +67,7 @@
   src: url('/fonts/OpenSans-Bold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -66,6 +75,7 @@
   src: url('/fonts/OpenSans-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -73,6 +83,7 @@
   src: url('/fonts/Inter_18pt-Bold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -80,6 +91,7 @@
   src: url('/fonts/Inter_18pt-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -87,6 +99,7 @@
   src: url('/fonts/Inter_18pt-SemiBold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -94,6 +107,7 @@
   src: url('/fonts/Inter_18pt-Medium.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -101,6 +115,7 @@
   src: url('/fonts/NotoNastaliqUrdu-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -108,6 +123,7 @@
   src: url('/fonts/NotoNastaliqUrdu-Medium.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -115,6 +131,7 @@
   src: url('/fonts/NotoNastaliqUrdu-Bold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 body {
@@ -128,26 +145,33 @@ body {
 
 
 ::-webkit-scrollbar {
-  width: 10px;              /* Width of the vertical scrollbar */
-  height: 10px;             /* Height of the horizontal scrollbar */
+  width: 10px;
+  /* Width of the vertical scrollbar */
+  height: 10px;
+  /* Height of the horizontal scrollbar */
 }
 
 ::-webkit-scrollbar-track {
-  background: #F5FFF5;      /* Track color */
+  background: #F5FFF5;
+  /* Track color */
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(180deg, #316D52, #1E4434);  /* Thumb gradient */
+  background: linear-gradient(180deg, #316D52, #1E4434);
+  /* Thumb gradient */
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(180deg, #316D52, #1E4434);  /* On hover */
+  background: linear-gradient(180deg, #316D52, #1E4434);
+  /* On hover */
 }
 
 /* For Firefox */
 * {
-  scrollbar-width: thin;                     /* 'auto' or 'thin' */
-  scrollbar-color: #316D52 #f1f1f1;         /* thumb color | track color */
+  scrollbar-width: thin;
+  /* 'auto' or 'thin' */
+  scrollbar-color: #316D52 #f1f1f1;
+  /* thumb color | track color */
 }
